--- a/Src/TODO.txt
+++ b/Src/TODO.txt
@@ -1,5 +1,28 @@
+make public
+screenshot in vsmp
+make grid size changeable
+change the yoga icon 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 https://pixabay.com/illustrations/friends-trust-friendship-together-1015296/
-
 https://pixabay.com/illustrations/friends-trust-friendship-together-1027840/
-
-https://pixabay.com/illustrations/yoga-kondalini-sport-3dman-2566577/
