--- a/Src/TODO.txt
+++ b/Src/TODO.txt
@@ -4,7 +4,7 @@ change the yoga icon
 give the manifesto a background colour ?
 style the words a bit better ? red ?
 apply top publisher ? https://docs.microsoft.com/en-us/azure/devops/extend/publish/publicize?view=azure-devops#apply-to-be-a-top-publisher
-
+add badges to github repo
 
 
 
