--- a/Src/TODO.txt
+++ b/Src/TODO.txt
@@ -1,9 +1,7 @@
 make grid size changeable
 
-change the yoga icon 
-give the manifesto a background colour ?
-style the words a bit better ? red ?
-apply top publisher ? https://docs.microsoft.com/en-us/azure/devops/extend/publish/publicize?view=azure-devops#apply-to-be-a-top-publisher
+change the yoga icon ?
+styling (background colour ? style the words a bit better ? red ?)
 add badges to github repo
 
 
